--- a/navit/navit/gui/internal/CMakeLists.txt
+++ b/navit/navit/gui/internal/CMakeLists.txt
@@ -1,1 +1,7 @@
-module_add_library(gui_internal gui_internal.c gui_internal_bookmark.c gui_internal_command.c gui_internal_gesture.c gui_internal_html.c gui_internal_menu.c gui_internal_poi.c gui_internal_search.c gui_internal_widget.c gui_internal_keyboard.c)
+set(gui_internal_LIBS "-lspotify -lasound -lpthread -lcurl -ljansson")
+module_add_library(gui_internal gui_internal.c gui_internal_bookmark.c
+	gui_internal_command.c gui_internal_gesture.c gui_internal_html.c
+	gui_internal_menu.c gui_internal_poi.c gui_internal_search.c
+	gui_internal_widget.c gui_internal_keyboard.c gui_internal_spotify.c
+	gui_internal_foursquare.c spotify/audio.c spotify/alsa-audio.c
+	foursquare/json.c foursquare/jsmn.c foursquare/buf.c)
