Proper use of cmake

--- a/navit/CMakeLists.txt
+++ b/navit/CMakeLists.txt
@@ -121,7 +121,8 @@ find_package(PythonLibs)
 find_package(OpenSSL)
 find_package(Threads)
 find_package(Gettext)
-find_package(libspotify REQUIRED)
+find_package(libspotify)
+find_package(Jansson)
 libfind_pkg_check_modules(FONTCONFIG fontconfig)
 #Qt detection
 if (NOT DISABLE_QT)
@@ -338,6 +339,11 @@ if (libspotify_FOUND)
    set_with_reason(plugin/spotify "libspotify found" TRUE)
 endif(libspotify_FOUND)
 
+set (USE_GOOGLEPLACES 1)
+if (JANSSON_FOUND)
+   set (USE_GOOGLEPLACES 1)
+endif (JANSSON_FOUND)
+
 if (LIBGARMIN_FOUND)
    include_directories(${LIBGARMIN_INCLUDE_DIRS})
    set_with_reason(map/garmin "Garmin library found" TRUE ${LIBGARMIN_LDFLAGS})
@@ -400,7 +406,6 @@ add_module(map/csv "Default" TRUE)
 
 #Modules without test yet
 add_module(plugin/pedestrian "Default" FALSE)
-add_module(plugin/spotify "Default" TRUE)
 add_module(speech/android "Default" FALSE)
 add_module(speech/espeak "Default" FALSE)
 add_module(speech/iphone "Default" FALSE)
