Enhancing cmake support for the spotify plugin

--- a/navit/CMakeLists.txt
+++ b/navit/CMakeLists.txt
@@ -335,13 +335,16 @@ if (GYPSY_FOUND)
    set_with_reason(vehicle/gypsy "gypsy lib found" TRUE)
 endif(GYPSY_FOUND)
 
-if (libspotify_FOUND)
-   set_with_reason(plugin/spotify "libspotify found" TRUE)
-endif(libspotify_FOUND)
+set(USE_SPOTIFY 0)
+if (LIBSPOTIFY_FOUND)
+   set (USE_SPOTIFY 1)
+endif(LIBSPOTIFY_FOUND)
 
-set (USE_GOOGLEPLACES 1)
+set (USE_GOOGLEPLACES 0)
+set (USE_FOURSQUARE 0)
 if (JANSSON_FOUND)
    set (USE_GOOGLEPLACES 1)
+   set (USE_FOURSQUARE 1)
 endif (JANSSON_FOUND)
 
 if (LIBGARMIN_FOUND)
