Better usage of cmake

--- a/navit/CMakeLists.txt
+++ b/navit/CMakeLists.txt
@@ -122,6 +122,7 @@ find_package(OpenSSL)
 find_package(Threads)
 find_package(Gettext)
 find_package(libspotify)
+find_package(ALSA)
 find_package(Jansson)
 libfind_pkg_check_modules(FONTCONFIG fontconfig)
 #Qt detection
@@ -335,18 +336,6 @@ if (GYPSY_FOUND)
    set_with_reason(vehicle/gypsy "gypsy lib found" TRUE)
 endif(GYPSY_FOUND)
 
-set(USE_SPOTIFY 0)
-if (LIBSPOTIFY_FOUND)
-   set (USE_SPOTIFY 1)
-endif(LIBSPOTIFY_FOUND)
-
-set (USE_GOOGLEPLACES 0)
-set (USE_FOURSQUARE 0)
-if (JANSSON_FOUND)
-   set (USE_GOOGLEPLACES 1)
-   set (USE_FOURSQUARE 1)
-endif (JANSSON_FOUND)
-
 if (LIBGARMIN_FOUND)
    include_directories(${LIBGARMIN_INCLUDE_DIRS})
    set_with_reason(map/garmin "Garmin library found" TRUE ${LIBGARMIN_LDFLAGS})
@@ -424,6 +413,31 @@ add_feature(USE_ROUTING "default" TRUE)
 add_feature(USE_SVG "default" TRUE)
 add_feature(SVG2PNG "default" TRUE)
 add_feature(SAMPLE_MAP "default" TRUE)
+add_feature(USE_SPOTIFY "default" FALSE)
+add_feature(USE_GOOGLEPLACES "default" FALSE)
+
+#set(USE_SPOTIFY 0)
+if (LIBSPOTIFY_FOUND) 
+	#set (USE_SPOTIFY 1)
+	if (ALSA_FOUND)
+		set_with_reason(USE_SPOTIFY "libspotify and alsa found" TRUE)
+	else (ALSA_FOUND)
+		set_with_reason(USE_SPOTIFY "alsa not found" FALSE)
+	endif (ALSA_FOUND)
+else(LIBSPOTIFY_FOUND)
+	set_with_reason(USE_SPOTIFY "libspotify not found" FALSE)
+endif(LIBSPOTIFY_FOUND)
+
+#set (USE_GOOGLEPLACES 0)
+set (USE_FOURSQUARE 0)
+if (JANSSON_FOUND)
+	set_with_reason(USE_GOOGLEPLACES "jansson found" TRUE)#
+	#    message( FATAL_ERROR "You can not do this at all, CMake will exit." )
+	#set (USE_GOOGLEPLACES 1)
+   set (USE_FOURSQUARE 1)
+else (JANSSON_FOUND)
+	set_with_reason(USE_GOOGLEPLACES "jansson not found" FALSE)
+endif (JANSSON_FOUND)
 
 IF(NOT svg2png_scaling)
    set(svg2png_scaling 0 16 32 48 64 96)
