Moved the api keys to a .c, fixes the header include issue

--- a/navit/navit/gui/internal/CMakeLists.txt
+++ b/navit/navit/gui/internal/CMakeLists.txt
@@ -1,12 +1,12 @@
 if(LIBSPOTIFY_FOUND)
 	set(spotify_LIBS "-lspotify -lasound -lpthread")
 	set(spotify_sources gui_internal_spotify.c spotify/audio.c
-	spotify/alsa-audio.c)
+	spotify/alsa-audio.c api_keys.c)
 endif(LIBSPOTIFY_FOUND)
 if(JANSSON_FOUND)
 	set(foursquare_LIBS "-ljansson -lpthread -lcurl")
 	set(fourquare_sources gui_internal_foursquare.c
-		gui_internal_googlesearch.c network.c)
+		gui_internal_googlesearch.c network.c api_keys.c)
 endif(JANSSON_FOUND)
 set(gui_internal_LIBS ${spotify_LIBS} ${foursquare_LIBS})
 module_add_library(gui_internal gui_internal.c gui_internal_bookmark.c
