Added cmake options for internal/foursquare

--- a/navit/CMakeLists.txt
+++ b/navit/CMakeLists.txt
@@ -415,10 +415,9 @@ add_feature(SVG2PNG "default" TRUE)
 add_feature(SAMPLE_MAP "default" TRUE)
 add_feature(USE_SPOTIFY "default" FALSE)
 add_feature(USE_GOOGLEPLACES "default" FALSE)
+add_feature(USE_FOURSQUARE "default" FALSE)
 
-#set(USE_SPOTIFY 0)
 if (LIBSPOTIFY_FOUND) 
-	#set (USE_SPOTIFY 1)
 	if (ALSA_FOUND)
 		set_with_reason(USE_SPOTIFY "libspotify and alsa found" TRUE)
 	else (ALSA_FOUND)
@@ -428,15 +427,12 @@ else(LIBSPOTIFY_FOUND)
 	set_with_reason(USE_SPOTIFY "libspotify not found" FALSE)
 endif(LIBSPOTIFY_FOUND)
 
-#set (USE_GOOGLEPLACES 0)
-set (USE_FOURSQUARE 0)
 if (JANSSON_FOUND)
 	set_with_reason(USE_GOOGLEPLACES "jansson found" TRUE)#
-	#    message( FATAL_ERROR "You can not do this at all, CMake will exit." )
-	#set (USE_GOOGLEPLACES 1)
-   set (USE_FOURSQUARE 1)
+	set_with_reason(USE_FOURSQUARE "jansson found" TRUE)#
 else (JANSSON_FOUND)
 	set_with_reason(USE_GOOGLEPLACES "jansson not found" FALSE)
+	set_with_reason(USE_FOURSQUARE "jansson not found" FALSE)
 endif (JANSSON_FOUND)
 
 IF(NOT svg2png_scaling)
