--- a/navit/navit/gui/internal/CMakeLists.txt
+++ b/navit/navit/gui/internal/CMakeLists.txt
@@ -4,13 +4,16 @@ if(USE_SPOTIFY)
 	spotify/alsa-audio.c api_keys.c)
 endif(USE_SPOTIFY)
 if(USE_GOOGLEPLACES)
-	set(foursquare_LIBS "-ljansson -lpthread -lcurl")
-	set(fourquare_sources gui_internal_foursquare.c
-		gui_internal_googlesearch.c network.c api_keys.c)
+	set(api_LIBS "-ljansson -lpthread -lcurl")
+	set(googleplaces_sources gui_internal_googlesearch.c network.c api_keys.c)
 endif(USE_GOOGLEPLACES)
-set(gui_internal_LIBS ${spotify_LIBS} ${foursquare_LIBS})
+if(USE_FOURSQUARE)
+	set(api_LIBS "-ljansson -lpthread -lcurl")
+	set(fourquare_sources gui_internal_foursquare.c network.c api_keys.c)
+endif(USE_FOURSQUARE)
+set(gui_internal_LIBS ${spotify_LIBS} ${api_LIBS})
 module_add_library(gui_internal gui_internal.c gui_internal_bookmark.c
 	gui_internal_command.c gui_internal_gesture.c gui_internal_html.c
 	gui_internal_menu.c gui_internal_poi.c gui_internal_search.c
 	gui_internal_widget.c gui_internal_keyboard.c
-	${spotify_sources} ${fourquare_sources})
+	${spotify_sources} ${fourquare_sources} ${googleplaces_sources})
