--- a/navit/CMakeLists.txt
+++ b/navit/CMakeLists.txt
@@ -398,6 +398,7 @@ add_module(map/csv "Default" TRUE)
 
 #Modules without test yet
 add_module(plugin/pedestrian "Default" FALSE)
+add_module(plugin/j1850 "Default" TRUE)
 add_module(speech/android "Default" FALSE)
 add_module(speech/espeak "Default" FALSE)
 add_module(speech/iphone "Default" FALSE)
