Temporarily disable builds others than tomtom

--- a/circle.yml
+++ b/circle.yml
@@ -28,7 +28,7 @@ test:
     - bash ci/build.sh:
         parallel: true
         files:
-          - ci/build_*.sh
+          - ci/build_tomtom*.sh
 deployment:
   publish_to_playstore:
     branch: master
